packages/build/tests/error/build/fixtures/exception/plugin.js
module.exports = {
  name: 'netlify-plugin-test',
  async onInit() {
    throw new Error('test')
  },
}
